fixed a few bugs; samo projects got updated; cosmetic changes;

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -1,5 +1,6 @@
 $imgurl: '{{ site.baseurl }}img';
 
+@import 'reset'       ;
 @import 'vars'        ;
 @import 'functions'   ;
 @import 'mixins'      ;
