--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,7 @@
 <noscript id="deferred-styles">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl | append: 'css/stylesheet.css' | append: print_file_version }}">
 </noscript>
-<script async type="text/javascript">
+<script type="text/javascript">
 {% include js/loadcss.js %}
 </script>
 {% if page.url contains 'contact' %}
