--- a/_sass/theme/_custom.scss
+++ b/_sass/theme/_custom.scss
@@ -4,8 +4,8 @@
 {
     .g-recaptcha
     {
-        @include vendor('transform', 'scale(0.86)');
-        @include vendor('transform-origin', '25px 0');
+        @include vendor('transform'       , 'scale(0.86)');
+        @include vendor('transform-origin', '25px 0')     ;
     }
 }
 
@@ -22,9 +22,9 @@
 
     &.major {
         @include vendor('transform', 'rotate(-45deg)');
-        display: inline-block;
-        border-radius: 3px;
         border: solid 2px _palette(border);
+        border-radius: 3px;
+        display: inline-block;
         font-size: 1.35em;
         height: calc(3em + 2px);
         line-height: 3em;
@@ -110,6 +110,7 @@
     @include vendor('display', 'flex');
     @include vendor('align-items', 'center');
     @include vendor('justify-content', 'center');
+    @include vendor('transition', '.5s ease-out');
     background-color: transparent;
     border-radius: 3px;
     color: transparent !important;
@@ -122,7 +123,7 @@
     width: 100%;
 
     &:hover {
-        @include vendor('transition', '.3s ease-in');
+        @include vendor('transition', '.25s ease-in');
         background-color: rgba(0, 0, 0, .7);
         color: rgb(250, 250, 250) !important;
     }
@@ -320,7 +321,7 @@
 $conduit-width: 1px;
 $conduit-pulse-color: rgb(255, 255, 255);
 
-@include keyframe(current) {
+@include keyframes(current) {
     0% {
         border-image: linear-gradient(to bottom, $conduit-pulse-color, transparent) 1 !important;
     }
