--- a/_sass/theme/_footer.scss
+++ b/_sass/theme/_footer.scss
@@ -3,7 +3,7 @@
 #footer {
     @include padding(4.5em, 0);
     background-color: darken(_palette(footer-bg), 8);
-    text-align: center;
+    text-align      : center;
 
     .icons {
         font-size: 1.6em;
@@ -18,23 +18,23 @@
     }
 
     .copyright {
-        color: _palette(fg-light);
-        font-size: 0.8em;
+        color         : _palette(fg-light);
+        font-size     : .8em;
         letter-spacing: _size(letter-spacing-alt);
-        list-style: none;
-        padding: 0;
+        list-style    : none;
+        padding       : 0;
         text-transform: uppercase;
 
         li {
-            border-left: solid 1px _palette(fg-light);
-            display: inline-block;
-            line-height: 1em;
-            margin-left: 1em;
+            border-left : solid 1px _palette(fg-light);
+            display     : inline-block;
+            line-height : 1em;
+            margin-left : 1em;
             padding-left: 1em;
 
             &:first-child {
-                border-left: 0;
-                margin-left: 0;
+                border-left : 0;
+                margin-left : 0;
                 padding-left: 0;
             }
 
@@ -47,11 +47,11 @@
             }
 
             @include breakpoint(xsmall) {
-                border: 0;
-                display: block;
+                border     : 0;
+                display    : block;
                 line-height: 1.65em;
-                margin: 0;
-                padding: 0.5em 0;
+                margin     : 0;
+                padding    : .5em 0;
             }
         }
     }
