--- a/_sass/theme/_header.scss
+++ b/_sass/theme/_header.scss
@@ -39,7 +39,7 @@ $null : 0;
     }
 
     nav {
-        display: inline-block;
+        display: block;
         float: right;
         height: inherit;
         line-height: inherit;
