--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                         {% endif %}
                         {% endfor %}
                         <li>
-                            <a href="{{ 'feed.xml' | prepend: site.baseurl }}" class="icon fa-feed" title="Feed"
+                            <a href="{{ '2018-07-25-feed.xml' | prepend: site.baseurl }}" class="icon fa-feed" title="Feed"
                              > Feed</a>
                         </li>
                     </ul>
