--- a/_includes/specialty_content.html
+++ b/_includes/specialty_content.html
@@ -10,10 +10,10 @@
             {% if post.tags contains page.tag %}
                 {% assign numProjects = numProjects | plus: 1 %}
             <div class="4u 6u(small) 10u(vsmall) 12u(xsmall)">
-                <a href="{{ post.url | remove:'.html' | prepend: site.baseurl | replace: '//','/' }}"
+                <a href="{{ post.url | remove:'.html' | prepend: site.url_dir | replace: '//','/' }}"
                  class="image fit shadow">
                     <h4 class="overlay"><span>{{ post.title }}</span></h4>
-                    <img src="{{ post.thumb | prepend: 'img/' | prepend: site.baseurl }}" alt="{{ post.title }}" />
+                    <img src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}" alt="{{ post.title }}" />
                 </a>
             </div>
             {% endif %}
