--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,14 +1,14 @@
 <noscript id="deferred-styles">
-    <link rel="stylesheet" type="text/css" href="{{ 'css/stylesheet.css' | prepend: site.baseurl | append: print_file_version }}">
+    <link rel="stylesheet" type="text/css" href="{{ 'css/stylesheet.css' | prepend: site.url_dir | append: print_file_version }}">
 </noscript>
 <script type="text/javascript">
 {% include js/loadcss.js %}
 </script>
 {% if page.url contains 'contact' %}
-<script async src="{{ 'js/scripts.contact.js' | prepend: site.baseurl }}" type="text/javascript"></script>
+<script async src="{{ 'js/scripts.contact.js' | prepend: site.url_dir }}" type="text/javascript"></script>
 {% else %}
-<script async src="{{ 'js/scripts.js' | prepend: site.baseurl }}" type="text/javascript"></script>
+<script async src="{{ 'js/scripts.js' | prepend: site.url_dir }}" type="text/javascript"></script>
 {% endif %}
 <!--[if lte IE 8]>
-<script src="{{ "js/ie/respond.min.js' | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "js/ie/respond.min.js' | prepend: site.url_dir }}" type="text/javascript"></script>
 <![endif]-->
