cleanup; config changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,6 @@
         {% else %}
         <span itemprop="company">{{ site.title }}</span>.
         {% endif %}
-        All rights reserved. Barely.</li>
+        All rights reserved.</li>
     </ul>
 </footer>
