--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -49,7 +49,7 @@ $palette: (
     fg-bold:            #fff,
     fg-light:           rgba(255, 255, 255, .5),
     field-bg:           #f9f9f9,
-    footer-bg:          rgba(46, 56, 66, .95),
+    footer-bg:          rgb(46, 56, 66),
     border:             #fff,
     border-bg:          rgba(144, 144, 144, .25),
     border2:            #fff,
