--- a/_sass/theme/_custom.scss
+++ b/_sass/theme/_custom.scss
@@ -321,25 +321,101 @@
 $conduit-width: 1px;
 $conduit-pulse-color: rgb(255, 255, 255);
 
-@include keyframes(current) {
+@include keyframes(conduit-current) {
     0% {
-        border-image: linear-gradient(to bottom, $conduit-pulse-color, transparent) 1 !important;
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 10%, _palette(accent1, border) 60%) 1;
+    }
+
+    5% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 20%, _palette(accent1, border) 60%) 1;
+    }
+
+    10% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 30%, _palette(accent1, border) 60%) 1;
+    }
+
+    15% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 40%, _palette(accent1, border) 60%) 1;
+    }
+
+    20% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 50%, _palette(accent1, border) 60%) 1;
+    }
+
+    25% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 60%, _palette(accent1, border) 60%) 1;
+    }
+
+    30% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 70%, _palette(accent1, border) 60%) 1;
+    }
+
+    35% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 80%, _palette(accent1, border) 60%) 1;
+    }
+
+    40% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 90%, _palette(accent1, border) 60%) 1;
+    }
+
+    45% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 93%, _palette(accent1, border) 60%) 1;
+    }
+
+    50% {
+        border-image: linear-gradient(to bottom, _palette(accent1, border), $conduit-pulse-color 95%, _palette(accent1, border) 60%) 1;
+    }
+
+    55% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 5%, _palette(accent1, border) 60%) 1;
+    }
+
+    60% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 15%, _palette(accent1, border) 60%) 1;
+    }
+
+    65% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 25%, _palette(accent1, border) 60%) 1;
+    }
+
+    70% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 35%, _palette(accent1, border) 60%) 1;
+    }
+
+    75% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 45%, _palette(accent1, border) 60%) 1;
+    }
+
+    80% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 55%, _palette(accent1, border) 60%) 1;
+    }
+
+    85% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 65%, _palette(accent1, border) 60%) 1;
+    }
+
+    90% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 75%, _palette(accent1, border) 60%) 1;
+    }
+
+    95% {
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 85%, _palette(accent1, border) 60%) 1;
     }
 
     100% {
-        border-image: linear-gradient(to top, $conduit-pulse-color, transparent) 1 !important;
+        border-image: linear-gradient(to right, _palette(accent1, border), $conduit-pulse-color 95%, _palette(accent1, border) 60%) 1;
     }
 }
 
 .conduit-border {
     > * {
-        //animation: current 2s -.5s linear infinite;
         border-bottom: solid $conduit-width _palette(accent1, border);
         border-left: solid $conduit-width _palette(accent1, border);
         margin: 0 !important;
+        //animation: conduit-current 1s -.5s linear infinite;
 
         &:nth-child(2n) {
-            border-left: 0 ;
+            border-left: 0;
             border-right: solid $conduit-width _palette(accent1, border);
         }
 
