--- a/_sass/_skel.scss
+++ b/_sass/_skel.scss
@@ -4,7 +4,8 @@
 
 	/// Breakpoints.
 	/// @var {list}
-	$breakpoints: () !global;
+	// $breakpoints: () !global;
+	$breakpoints: ();
 
 	/// Vendor prefixes.
 	/// @var {list}
@@ -570,7 +571,7 @@
 			}
 
 		// Expand just the value?
-			@elseif $expandValue {
+			@else if $expandValue {
 			    @each $vendor in $vendor-prefixes {
 			        #{$property}: #{str-replace-all($value, '-prefix-', $vendor)};
 			    }
