--- a/_sass/_functions.scss
+++ b/_sass/_functions.scss
@@ -39,3 +39,8 @@
 @function _size($keys...) {
     @return val($size, $keys...);
 }
+
+// calc value
+@function _divide($first, $second) {
+    @return $first / $second;
+}
