--- a/_sass/fontawesome/_fixed-width.scss
+++ b/_sass/fontawesome/_fixed-width.scss
@@ -1,6 +1,6 @@
 // Fixed Width Icons
 // -------------------------
 .#{$fa-css-prefix}-fw {
-  width: (18 / 14) + em;
+  width: _divide(18, 14) + em;
   text-align: center;
 }
