--- a/_sass/fontawesome/_larger.scss
+++ b/_sass/fontawesome/_larger.scss
@@ -3,8 +3,8 @@
 
 /* makes the font 33% larger relative to the icon container */
 .#{$fa-css-prefix}-lg {
-  font-size: (4 / 3) + em;
-  line-height: (3 / 4) + em;
+  font-size: _divide(4, 3) + em;
+  line-height: _divide(3, 4) + em;
   vertical-align: -15%;
 }
 .#{$fa-css-prefix}-2x { font-size: 2em; }
