--- a/_sass/fontawesome/_list.scss
+++ b/_sass/fontawesome/_list.scss
@@ -11,9 +11,9 @@
   position: absolute;
   left: -$fa-li-width;
   width: $fa-li-width;
-  top: (2 / 14) + em;
+  top: _divide(2, 14) + em;
   text-align: center;
   &.#{$fa-css-prefix}-lg {
-    left: -$fa-li-width + ((4 / 14) + em);
+    left: -$fa-li-width + (_divide(4, 14) + em);
   }
 }
