--- a/_sass/_library-animations.scss
+++ b/_sass/_library-animations.scss
@@ -4,7 +4,7 @@
 //}
 
 @mixin animation-text-pulse($name, $color: #fff) {
-    @include keyframes($name) {
+    @include keyframe($name) {
         0% {
             @include vendor('text-shadow', '0');
         }
