--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -26,7 +26,7 @@
 @import 'theme/content';
 @import 'theme/footer' ;
 @import 'theme/syntax' ;
-@import 'theme/menu'  ;
+//@import 'theme/menu'   ;
 
 /* Basic */
 
