--- a/_sass/theme/_menu.scss
+++ b/_sass/theme/_menu.scss
@@ -74,10 +74,10 @@ $transparent : rgba(0, 0, 0, 0);
                     line-height: 2.5em;
                 }
 
-                &:hover {
-                    @include vendor('animation', 'electric-pulse 2s 0s linear infinite');
-                    @include animation-text-pulse(electric-pulse, #ff3);
-                }
+                //&:hover {
+                //    @include vendor('animation', 'electric-pulse 2s 0s linear infinite');
+                //    @include animation-text-pulse(electric-pulse, #ff3);
+                //}
             }
         }
     }
