--- a/_sass/theme/_custom.scss
+++ b/_sass/theme/_custom.scss
@@ -412,7 +412,7 @@ $conduit-pulse-color: rgb(255, 255, 255);
         border-bottom: solid $conduit-width _palette(accent1, border);
         border-left: solid $conduit-width _palette(accent1, border);
         margin: 0 !important;
-        //@include vendor('animation', 'conduit-current 2s -.5s linear infinite');
+        @include vendor('animation', 'conduit-current 2s -.5s linear infinite');
 
         &:nth-child(2n) {
             border-left: 0;
